--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,8 +3,8 @@ carts:
         name: carts
     image:
         pullPolicy: IfNotPresent
-        repository: docker.io/keptnexamples/carts
-        tag: 0.7.1
+        repository: index.docker.io/keptnexamples/carts
+        tag: 0.7.2
     replicaCount: 1
     resources:
         limits:
