--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -23,8 +23,8 @@ cartsBlue:
         name: carts
     image:
         pullPolicy: IfNotPresent
-        repository: docker.io/keptnexamples/carts
-        tag: 0.7.3
+        repository: index.docker.io/keptnexamples/carts
+        tag: 0.7.1
     replicaCount: 1
     resources:
         limits:
@@ -43,7 +43,7 @@ cartsGreen:
         name: carts
     image:
         pullPolicy: IfNotPresent
-        repository: docker.io/keptnexamples/carts
+        repository: index.docker.io/keptnexamples/carts
         tag: 0.7.1
     replicaCount: 1
     resources:
