--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -23,7 +23,8 @@ cartsDb:
         name: carts-db
     image:
         pullPolicy: IfNotPresent
-        repository: mongo
+        repository: index.docker.io/docker.io/mongo
+        tag: 4.2.2
     replicaCount: 1
     service:
         externalPort: 27017
